@@ -15,6 +15,7 @@
   Allow NTP time from gpsd://, tcp:// and udp:// sources
   Add the -B, --nobuffer, option to gpspipe.
   gpsd opens $RUNDIR/chrony.clk.XXX.sock to supply serial time to chronyd.
+  Add -g and --garmin options to gpxlogger for depth.
 
 3.24: 2022-04-22
   NTRIP 2.0 now works.  But still only plain HTML, not RTP, etc.
